Allow default frame factory method overload